--- a/openssl.cnf
+++ b/openssl.cnf
@@ -25,7 +25,7 @@ email_in_dn = no
 name_opt = ca_default  # Subject Name options
 cert_opt = ca_default  # Certificate field options
 policy = policy_match
-copy_extensions = copyall
+copy_extensions = copy
 unique_subject = no
 
 certs = $dir/certs  # Where the issued certs are kept
@@ -86,73 +86,48 @@ countryName_max = 2
 commonName = Common Name (e.g. server FQDN or YOUR name)
 commonName_max = 64
 
-0.organizationName_default = Maison Strommen-Guittard
+0.organizationName_default = My org name
 #1.organizationName_default = My sub org name
-organizationalUnitName_default = Maison.Tech
+organizationalUnitName_default = My org unit
 localityName_default = Seattle
 stateOrProvinceName_default = Washington
 countryName_default = US
 
 
 [ usr_cert ]
-basicConstraints=CA:FALSE
-# Here are some examples of the usage of nsCertType. If it is omitted
-# the certificate can be used for anything *except* object signing.
+basicConstraints = critical, CA:FALSE
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always, issuer:always
 
-# This is OK for an SSL server.
-# nsCertType = server
-
-# For an object signing certificate this would be used.
-# nsCertType = objsign
-
-# For normal client use this is typical
-# nsCertType = client, email
-
-# and for everything including object signing:
-# nsCertType = client, email, objsign
-
-# This is typical in keyUsage for a client certificate.
-# keyUsage = nonRepudiation, digitalSignature, keyEncipherment
-
-# This will be displayed in Netscape's comment listbox.
-nsComment = "OpenSSL Generated Certificate"
-
-# PKIX recommendations harmless if included in all certificates.
-subjectKeyIdentifier=hash
-authorityKeyIdentifier=keyid,issuer
-
-# This stuff is for subjectAltName and issuerAltname.
-# Import the email address.
-# subjectAltName=email:copy
-# An alternative to produce certificates that aren't
-# deprecated according to PKIX.
-# subjectAltName=email:move
-
-# Copy subject details
-# issuerAltName=issuer:copy
-
-#nsCaRevocationUrl = http://www.domain.dom/ca-crl.pem
-#nsBaseUrl
-#nsRevocationUrl
-#nsRenewalUrl
-#nsCaPolicyUrl
-#nsSslServerName
+# nsComment = "OpenSSL Generated Certificate"
 
 [ v3_req ]
 # Extensions to add to a certificate request
-basicConstraints = CA:FALSE
+basicConstraints = critical, CA:FALSE
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always, issuer:always
 keyUsage = nonRepudiation, digitalSignature, keyEncipherment
-subjectKeyIdentifier=hash
 
 [ v3_ca ]
-basicConstraints = critical,CA:true
-subjectKeyIdentifier=hash
-authorityKeyIdentifier=keyid:always,issuer
-keyUsage = cRLSign, keyCertSign
-nsCertType = sslCA, emailCA
+basicConstraints = critical, CA:TRUE
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always, issuer:always
+keyUsage = critical, cRLSign, digitalSignature, keyCertSign
 
 # Include email address in subject alt name: another PKIX recommendation
 subjectAltName=email:copy
 # Copy issuer details
 issuerAltName=issuer:copy
 
+[ v3_ica ]
+basicConstraints = critical, CA:TRUE, pathlen:0
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always, issuer:always
+keyUsage = critical, cRLSign, digitalSignature, keyCertSign
+
+[ v3_server ]
+basicConstraints = CA:FALSE
+subjectKeyIdentifier = hash
+authorityKeyIdentifier = keyid:always, issuer:always
+keyUsage = digitalSignature, keyEncipherment, dataEncipherment
+extendedKeyUsage = clientAuth, serverAuth
